2010-12-28  Per Bothner  <per@bothner.com>

	* Compilation.java (typeFieldLocation, typeStaticFieldLocation):
	New static Classtype fields.
	* Declaration.java (load): Use them.
	* ReferenceExp.java (getType): Return more specific Location types.
	* ModuleInfo.java (setupModuleExp): Avoid some needless getInstance
	calls - which caused references to say *print-miser-width* to fail.

2010-12-26  Per Bothner  <per@bothner.com>

	* Declaration.java (compileAnnotations): New method, partially
	based on code from ClassExp#compileMembers, but using new
	RuntimeAnnotationsAttr#maybeAddAnnotation.
	* ClassExp.java (compileMembers): Use Declaration#compileAnnotations.
	Also call compileAnnotations on nameDecl of methods and class itself.
	* InlineCalls.java (visitReferenceExp):  If processingAnnotations()
	treat a reference to a ClassExp as a constant.
	(visitAnnotations): Check if annotation use matches @Target.

2010-12-25  Per Bothner  <per@bothner.com>

	* Declaration.java (isClassMethod, isClassField): New methods.
	* InlineCalls.java: Use isClassMethod.

	* InlineCalls.java (visitQuoteExp): Warning if integer literal
	is out of range.

2010-12-24  Per Bothner  <per@bothner.com>

	* Declaration.java (annotations): New field.
	(numAnnotations, getAnnotation, setAnnotation, addAnnotation):
	New methods.
	(printInfo): Also print out annotations.
	* ClassExp.java (compileMembers): Emit annotations.
	(print): Some tweaks.
	* QuoteExp.java (validateApply): Add error check for if
	MakeAnnotation.makeMethodProc didn't get get inlined.
	* InlineCalls.java (processingAnnotations): New field.
	(processingAnnotations, visitAnnotations): New methods.
	(visitScopeExp): Call visitAnnotations.
	(checkType): If incompatible types, and we're
	processingAnnotations force an error rather than a warning.

	* ExpVisitor.java (getLanguage): New convenience method.

	* ApplyExp.java (inlineIfConstant): Copy line number to result.

2010-12-23  Per Bothner  <per@bothner.com>
